moved inventory to template

--- a/templates/inventory-controller.j2
+++ b/templates/inventory-controller.j2
@@ -1,7 +1,7 @@
 localhost ansible_connection=local
 
 [automationcontroller]
-localhost ansible_connection=local
+{{ inventory_hostname }} ansible_connection=local
 
 [database]
 
