parametrized registry creds

--- a/templates/inventory-controller.j2
+++ b/templates/inventory-controller.j2
@@ -16,5 +16,5 @@ pg_username='awx'
 pg_password='redhat'
 
 registry_url='registry.redhat.io'
-registry_username='<registry username>'
-registry_password='<registry password>'
+registry_username='{{ rhsm_user }}'
+registry_password='{{ rhsm_password }}'
